--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,101 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
+@font-face {
+	font-family: "Tgothic";
+	src: url("/src/assets/fonts/Tgothic/TgothicLight.otf");
+	font-weight: 100;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Tgothic";
+	src: url("/src/assets/fonts/Tgothic/TgothicMedium.ttf");
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Tgothic";
+	src: url("/src/assets/fonts/Tgothic/TgothicBlack.ttf");
+	font-weight: 700;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "IBM Plex Sans KR";
+	src: url("/src/assets/fonts/IBMPlexSansKR/IBMPlexSansKR-Thin.otf");
+	font-weight: 100;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "IBM Plex Sans KR";
+	src: url("/src/assets/fonts/IBMPlexSansKR/IBMPlexSansKR-Thin.otf");
+	font-weight: 100;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "IBM Plex Sans KR";
+	src: url("/src/assets/fonts/IBMPlexSansKR/IBMPlexSansKR-ExtraLight.otf");
+	font-weight: 200;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "IBM Plex Sans KR";
+	src: url("/src/assets/fonts/IBMPlexSansKR/IBMPlexSansKR-Light.otf");
+	font-weight: 300;
+	font-style: normal;
+	font-display: swap;
+}
+
+// @font-face {
+// 	font-family: "IBM Plex Sans KR";
+// 	src: url("/src/assets/fonts/IBMPlexSansKR/IBMPlexSansKR-Regular.otf");
+// 	font-weight: 400;
+// 	font-style: normal;
+// 	font-display: swap;
+// }
+
+@font-face {
+	font-family: "IBM Plex Sans KR";
+	src: url("/src/assets/fonts/IBMPlexSansKR/IBMPlexSansKR-Text.otf");
+	font-weight: 400; // 450
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "IBM Plex Sans KR";
+	src: url("/src/assets/fonts/IBMPlexSansKR/IBMPlexSansKR-Medium.otf");
+	font-weight: 500;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "IBM Plex Sans KR";
+	src: url("/src/assets/fonts/IBMPlexSansKR/IBMPlexSansKR-SemiBold.otf");
+	font-weight: 600;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "IBM Plex Sans KR";
+	src: url("/src/assets/fonts/IBMPlexSansKR/IBMPlexSansKR-Bold.otf");
+	font-weight: 700;
+	font-style: normal;
+	font-display: swap;
+}
+
 @font-face {
 	font-family: "Tgothic";
 	src: url("/src/assets/fonts/Tgothic/TgothicLight.otf");
@@ -24,16 +122,14 @@
 
 @keyframes hue-rotation {
 	0% {
-		filter: hue-rotate(calc(360deg / 6 * 0))
+		filter: hue-rotate(calc(360deg / 6 * 0));
 	}
 
 	50% {
-		filter: hue-rotate(calc(360deg / 6 * 5))
-
+		filter: hue-rotate(calc(360deg / 6 * 5));
 	}
 
 	100% {
-		filter: hue-rotate(calc(360deg / 6 * 0))
-
+		filter: hue-rotate(calc(360deg / 6 * 0));
 	}
 }
